# dockeroperator-with-airflow3-deployed-in-docker

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
airflow_deployment/from_current_airflow_home/: airflow_cli.sh  install.sh  uninstall.sh
airflow_deployment/from_custom_docker_compose_and_cfg/: README.md  airflow.cfg  airflow_cli.sh  docker-compose.yaml  install.sh  run_dag.sh  start.sh  stop.sh  uninstall.sh
airflow_deployment/from_scratch_with_default_config/: install.sh  uninstall.sh
dags/: docker_helloworld.py
